--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,26 +13,47 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Detect package.json
+        id: detect
+        run: |
+          if [ -f package.json ]; then
+            echo "has_pkg=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_pkg=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Setup Node
         uses: actions/setup-node@v4
+        if: steps.detect.outputs.has_pkg == 'true'
         with:
           node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci || npm i
+        if: steps.detect.outputs.has_pkg == 'true'
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm i
+          fi
 
       - name: Type check
-        run: npm run typecheck
+        if: steps.detect.outputs.has_pkg == 'true'
+        run: npm run typecheck --if-present
 
       - name: Lint
-        run: npm run lint
+        if: steps.detect.outputs.has_pkg == 'true'
+        run: npm run lint --if-present
 
       - name: Format check
-        run: npm run format
+        if: steps.detect.outputs.has_pkg == 'true'
+        run: npm run format --if-present
 
       - name: Unit tests
-        run: npm test
+        if: steps.detect.outputs.has_pkg == 'true'
+        run: npm test --if-present
 
       - name: Build
-        run: npm run build
+        if: steps.detect.outputs.has_pkg == 'true'
+        run: npm run build --if-present
