--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "typecheck": "tsc --noEmit",
     "typesense:setup": "tsx -r dotenv/config scripts/typesense-setup.ts",
     "index:full": "tsx -r dotenv/config scripts/reindex.ts",
-    "index:delta": "tsx -r dotenv/config scripts/changed-since.ts"
+    "index:delta": "tsx -r dotenv/config scripts/changed-since.ts",
+    "crawl:pickle": "tsx scripts/crawlers/pickleball-courts.ts",
+    "crawl:pickle:write": "powershell -NoProfile -Command \"$env:CRAWLER_WRITE_DB='true'; tsx scripts/crawlers/pickleball-courts.ts\""
   },
   "dependencies": {
+    "@playwright/test": "^1.55.1",
     "@prisma/client": "^5.18.0",
     "@supabase/supabase-js": "^2.45.4",
     "next": "^14.2.5",
+    "playwright": "^1.55.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "robots-parser": "^3.0.1",
     "typesense": "^1.8.2",
     "zod": "^3.23.8"
   },
